# fetris

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  fetris-1ec7cf247dc7dceb.js  fetris-2b07ba7ac5a72f1e.js  fetris-304176c286c55947.js  fetris-51628a4673cf91ec.js  fetris-51edc085d5480d6c.js  fetris-e1d87cb1e29bebdc.js  fetris-storage.js  fetris.js  fetris.wasm  fetris_bg.wasm  index.html  mq_js_bundle.js
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/shaders/: overlay.wgsl
docs/: AGENTS.md
hooks/: pre-commit
pkg/: fetris.d.ts  fetris.js  fetris_bg.wasm.d.ts
src/: .tests.rs.pending-snap  app_state.rs  audio.rs  audio_player.rs  components.rs  constants.rs  data.rs  game.rs  hiscores.rs  input.rs  judge.rs  main.rs  menu.rs  piece.rs  randomizer.rs  renderer.rs  resources.rs  rotation_system.rs  snapshot.rs  start_game.rs  storage.rs  stub_storage.rs  tests.rs  types.rs
src/menu/: controls.rs  debug.rs  hi_scores.rs  main_screen.rs  mod.rs  state.rs
src/render/: assets.rs  board.rs  hud.rs  mod.rs  overlay_material.rs  overlays.rs  particles.rs  piece.rs
src/snapshots/: fetris__tests__srs_tests__srs_rotation_snap_i.snap  fetris__tests__srs_tests__srs_rotation_snap_j.snap  fetris__tests__srs_tests__srs_rotation_snap_l.snap  fetris__tests__srs_tests__srs_rotation_snap_o.snap  fetris__tests__srs_tests__srs_rotation_snap_s.snap  fetris__tests__srs_tests__srs_rotation_snap_t.snap  fetris__tests__srs_tests__srs_rotation_snap_z.snap  (+7 more)
src/systems/: active.rs  input.rs  (+8 more)
web/: index.html  mq_js_bundle.README.md
(+36 files in other folders)
